<resources>
    <string name="app_name">Scouting</string>

    <string name="menu_select_specs">Change</string>
    <string name="menu_toggle_scouted">Toggle Scouted</string>
    <string name="menu_settings">Scouting Options</string>
    <string name="menu_new_entry">New Entry</string>

    <string name="hint_match">Match #</string>
    <string name="hint_team">Team #</string>
    <string name="hint_name">Name</string>

    <string name="schedule_mismatch">This match is not found  on the schedule</string>
    <string name="schedule_does_not_exist">A match schedule has not been provided</string>

    <string name="verify_match_info">Verify Match and Team</string>
    <string name="verify_match_proceed">Proceed Anyways</string>

    <string name="start_match">Start Scouting</string>
    <string name="start_timer">Start Timer</string>


    <string name="exit_confirmation">Exit Scouting?</string>
    <string name="exit_confirmation_body">
        All data entered will be lost. Scan the QR code to save it to a computer.
    </string>

    <string name="comments_hint">
        Comment here if there is an error with this entry
        (started late, missed click, needs re-scout, etc.)
        or if the robot behaved abnormally in the match.
    </string>

    <string name="edit_comments">Edit Comments</string>

    <string name="layout_error">There was a problem with the layout</string>

    <string-array name="board_choices">
        <item>Any</item>
        <item>Red 1</item>
        <item>Red 2</item>
        <item>Red 3</item>
        <item>Blue 1</item>
        <item>Blue 2</item>
        <item>Blue 3</item>
    </string-array>

    <string-array name="board_choices_v5">
        <item>Red 1</item>
        <item>Red 2</item>
        <item>Red 3</item>
        <item>Blue 1</item>
        <item>Blue 2</item>
        <item>Blue 3</item>
        <!--<item>Red Super Scout</item>-->
        <!--<item>Blue Super Scout</item>-->
    </string-array>

    <string name="send_with_another_method">Send with alternative method</string>
    <string name="entry_info">Entry Info</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_now">Now</string>
    <string name="btn_resume">Resume</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="show_entries_scouted">Scouted</string>

</resources>
