<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="ca.warp7.android.scouting.v5.V5ScoutingActivity">

    <LinearLayout
        android:id="@+id/highlight_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/hint_match"
            android:padding="2dp"
            android:src="@drawable/ic_layers_ablack_small"/>

        <TextView
            android:id="@+id/toolbar_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:textColor="@color/colorAlmostBlack"
            android:textSize="18sp"
            android:typeface="sans"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/hint_team"
            android:padding="2dp"
            android:src="@drawable/ic_book_ablack_small"/>

        <TextView
            android:id="@+id/toolbar_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/hint_team"
            android:padding="2dp"
            android:src="@drawable/ic_people_ablack_small"/>

        <TextView
            android:id="@+id/toolbar_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorAlmostBlack"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/start_timer"
            android:padding="2dp"
            android:src="@drawable/ic_timer_ablack_small"/>

        <TextView
            android:id="@+id/timer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:typeface="sans"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/time_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"/>

        <SeekBar
            android:id="@+id/time_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:visibility="gone"
            android:elevation="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/title_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:textColor="@color/colorAlmostBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:text="Tab Title"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical">

            <ImageButton
                android:id="@+id/play_pause_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_awhite_button"
                android:contentDescription="@string/btn_pause"
                android:padding="8dp"
                android:minWidth="64dp"
                android:visibility="gone"
                android:src="@drawable/ic_pause_ablack"/>

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/undo_now_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_awhite_button"
                android:contentDescription="@string/btn_undo"
                android:padding="8dp"
                android:minWidth="64dp"
                android:src="@drawable/ic_undo_ablack"/>

            <TextView
                android:id="@+id/start_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_accent_button"
                android:paddingLeft="24dp"
                android:paddingTop="7dp"
                android:paddingRight="24dp"
                android:paddingBottom="8dp"
                android:text="@string/start_timer"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/v5_comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_awhite_button"
                android:contentDescription="@string/btn_pause"
                android:padding="8dp"
                android:minWidth="64dp"
                android:src="@drawable/ic_comment_ablack"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
